--- a/tf_tips.html
+++ b/tf_tips.html
@@ -15,9 +15,11 @@
    
    <title>Trusted Friends: Education Tips</title>
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   
    <link rel="stylesheet" href="tf_base.css">
-   <link rel="stylesheet" href="tf_styles4_txt.css">
-   <link rel="stylesheet" href="tf_print2_txt.css">
+   <link rel="stylesheet" href="tf_styles4.css">
+   <link rel="stylesheet" href="tf_print2.css" media="print">
+   
    <meta charset="utf-8" />
 </head>
 
